--- a/src/pages/About/about.scss
+++ b/src/pages/About/about.scss
@@ -244,7 +244,7 @@
     .about {
         padding: 16px;
         color: #ffffff;
-
+        overflow: hidden;
 
         .top {
             margin: 16px auto 40px;
